# EventStoreDB-Client-Rust-Experimental

./: .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  codegen.rs  configure-tls-for-tests.yml  docker-compose.yml
.github/workflows/: deploy.yml  pull-request-check.yml  rust.yml  tests.yml
eventstore/: Cargo.toml  codegen.rs
eventstore-extras/: Cargo.toml  README.md
eventstore-extras/src/: lib.rs  stats.rs
eventstore-macros/: Cargo.toml
eventstore-macros/src/: lib.rs
eventstore/protos/: monitoring.proto  operations.proto  shared.proto
eventstore/src/: batch.rs  client.rs  commands.rs  grpc.rs  lib.rs  private.rs  projection_client.rs  request.rs  server_features.rs  types.rs
eventstore/src/event_store/: client.rs  generated.rs
eventstore/src/http/: mod.rs  persistent_subscriptions.rs
eventstore/src/operations/: gossip.rs  mod.rs
eventstore/src/options/: append_to_stream.rs  batch_append.rs  delete_stream.rs  mod.rs  persistent_subscription.rs  projections.rs  read_all.rs  read_stream.rs  retry.rs  subscribe_to_all.rs  subscribe_to_stream.rs  tombstone_stream.rs
eventstore/tests/: common.rs  images.rs  integration.rs
eventstore/tests/api/: mod.rs  operations.rs  persistent_subscriptions.rs  projections.rs  streams.rs
eventstore/tests/fixtures/connection_string/: mockups.toml
examples/: Cargo.toml  appending_events.rs  persistent_subscriptions.rs  quickstart.rs  reading_events.rs  server_side_filtering.rs  subscribing_to_stream.rs
protos/: serverfeatures.proto  streams.proto
src/: batch.rs  client.rs  commands.rs  connection.rs  gossip.rs  grpc.rs  grpc_connection.rs  lib.rs  mod.rs  private.rs  projection_client.rs  server_features.rs  types.rs
src/discovery/: cluster.rs
src/es6/: commands.rs  connection.rs  connection_db.rs  gossip.rs  grpc_connection.rs  mod.rs  types.rs
src/es6/grpc/event_store/client/: gossip.rs
src/event_store/: generated.rs  mod.rs
src/event_store/client/: gossip.rs  mod.rs  persistent.rs  projections.rs  shared.rs  streams.rs
src/http/: persistent_subscriptions.rs
src/operations/: mod.rs
src/options/: append_to_stream.rs  batch_append.rs  delete_stream.rs  mod.rs  persistent_subscription.rs  projections.rs  read_all.rs  read_stream.rs  subscribe_to_all.rs  subscribe_to_stream.rs  tombstone_stream.rs
tests/: images.rs  integration.rs
tests/fixtures/: projection-updated.js  projection.js
tests/fixtures/connection_string/: mockups.toml
