[package]
name = "eventstore"
version = "0.9.3"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2018"

# Uncomment if you want to update messages.rs code-gen.
# We disabled codegen.rs because it requires having `protoc` installed on your machine
# in order to build that library.
# build = "codegen.rs"

license = "MIT"
description = "Official EventStoreDB gRPC client"
repository = "https://github.com/EventStore/EventStoreDB-Client-Rust"
readme = "README.md"
keywords = ["database", "eventsourcing", "eventstore", "eventstoredb", "grpc"]
exclude = [
  ".gitignore",
  ".github",
  "rustfmt.toml"
]

categories = ["database", "api-bindings"]

[dependencies]
tokio = { version = "0.2", features = ["net", "stream", "time"] }
tokio-byteorder = "0.2"
futures = "0.3"
uuid = { version  = "0.8", features = [ "v4", "serde" ] }
bytes = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4"
rand = { version = "0.7", features = ["getrandom", "small_rng"] }
byteorder = "1.2"
http = "0.2"
tonic = { version = "0.3", features = ["tls", "tls-roots"] }
prost = "0.6"
prost-derive = "0.6"
prost-types = "0.6"
rustls = { version = "0.18", features = ["dangerous_configuration"] }
webpki = "0.21"
base64 = "^0.12"
trust-dns-resolver = "0.19"
nom = "5.1"
thiserror = "1.0"

[build-dependencies]
tonic-build = { version = "0.3", features = ["prost"] }

[[test]]
name = "integration"

[dev-dependencies]
pretty_env_logger = "0.4"
tokio-test = "0.2"
toml = "0.5"
tokio = { version = "0.2", features = ["macros"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
