[package]
name = "eventstore"
version = "2.0.0"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2018"

# Uncomment if you want to update messages.rs code-gen.
# We disabled codegen.rs because it requires having `protoc` installed on your machine
# in order to build that library.
# build = "codegen.rs"

license = "MIT"
description = "Official EventStoreDB gRPC client"
repository = "https://github.com/EventStore/EventStoreDB-Client-Rust"
readme = "README.md"
keywords = ["database", "eventsourcing", "eventstore", "eventstoredb", "grpc"]
exclude = [
  ".gitignore",
  ".github",
  "rustfmt.toml"
]

categories = ["database", "api-bindings"]

[dependencies]
tokio = { version = "1", features = ["time"] }
futures = "0.3"
uuid = { version  = "0.8", features = [ "v4", "serde" ] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
byteorder = "1.2"
http = "0.2"
tonic = { version = "0.4", features = ["tls", "tls-roots"] }
tonic-types = "0.3.0"
prost = "0.7"
prost-derive = "0.7"
prost-types = "0.7"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
webpki = "0.21"
base64 = "0.13"
nom = "6"
thiserror = "1"
async-trait = "0.1"
async-stream = "0.3"

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }

[[test]]
name = "integration"

[[example]]
name = "appending_events"
crate-type = ["staticlib"]

[[example]]
name = "quickstart"
crate-type = ["staticlib"]

[[example]]
name = "reading_events"
crate-type = ["staticlib"]

[[example]]
name = "server_side_filtering"
crate-type = ["staticlib"]

[[example]]
name = "subscribing_to_stream"
crate-type = ["staticlib"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4"
toml = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
testcontainers = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["rustls", "rustls-native-certs"] }
names = "0.11"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
