[package]
name = "eventstore"
version = "2.0.0"
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2021"

# Uncomment if you want to update messages.rs code-gen.
# We disabled codegen.rs because it requires having `protoc` installed on your machine
# in order to build that library.
# build = "codegen.rs"

license = "MIT"
description = "Official EventStoreDB gRPC client"
repository = "https://github.com/EventStore/EventStoreDB-Client-Rust"
readme = "README.md"
keywords = ["database", "eventsourcing", "eventstore", "eventstoredb", "grpc"]
exclude = [
  ".gitignore",
  ".github",
  "rustfmt.toml"
]

categories = ["database", "api-bindings"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["time"] }
futures = "0.3"
uuid = { version  = "0.8", features = [ "v4", "serde" ] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
byteorder = "1.2"
http = "0.2"
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
tonic-types = "0.4"
prost = "0.9"
prost-derive ="0.9"
prost-types = "0.9"
rustls = { version = "0.19", features = ["dangerous_configuration"] }
webpki = "0.21"
base64 = "0.13"
nom = "7"
thiserror = "1"
async-trait = "0.1"
async-stream = "0.3"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "rustls-tls-native-roots", "json"] }

[build-dependencies]
tonic-build = { version = "0.6", features = ["prost"] }

[[test]]
name = "integration"

[[example]]
name = "appending_events"
crate-type = ["staticlib"]

[[example]]
name = "quickstart"
crate-type = ["staticlib"]

[[example]]
name = "reading_events"
crate-type = ["staticlib"]

[[example]]
name = "server_side_filtering"
crate-type = ["staticlib"]

[[example]]
name = "subscribing_to_stream"
crate-type = ["staticlib"]

[[example]]
name = "persistent_subscriptions"
crate-type = ["staticlib"]

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4"
toml = "0.5"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
testcontainers = "0.12"
names = "0.12"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
