[package]
name = "eventstore-macros"
version = "0.0.1"
edition = "2021"
license = "MIT"

description = "Extra EventStoreDB gRPC client internal code generation features"
keywords = ["database", "eventsourcing", "eventstore", "eventstoredb", "grpc"]
repository = "https://github.com/EventStore/EventStoreDB-Client-Rust"
categories = ["database", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "fold", "extra-traits"] }
quote = "1"