[package]
authors = ["Yorick Laupa <yo.eight@gmail.com>"]
edition = "2021"
name = "eventstore"
version = "3.0.0"

# Uncomment if you want to update messages.rs code-gen.
# We disabled codegen.rs because it requires having `protoc` installed on your machine
# in order to build that library.
# build = "codegen.rs"

description = "Official EventStoreDB gRPC client"
keywords = ["database", "eventsourcing", "eventstore", "eventstoredb", "grpc"]
license = "MIT"
readme = "../README.md"
repository = "https://github.com/EventStore/EventStoreDB-Client-Rust"

categories = ["database", "api-bindings"]

[dependencies]
async-stream = "0.3"
base64 = "0.13"
bitflags = "2"
byteorder = "1.2"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
eventstore-macros = { path = "../eventstore-macros", version = "0.0.1" }
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "tcp"] }
hyper-rustls = { version = "0.23", features = ["rustls-native-certs", "http2"] }
log = "0.4"
nom = "7"
prost = "0.12"
prost-derive = "0.12"
prost-types = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
reqwest = { version = "0.11", default-features = false, features = [
  "rustls-tls",
  "rustls-tls-native-roots",
  "json",
] }
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-native-certs = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["time"] }
tokio-rustls = "0.23"
tonic = { version = "0.10", features = ["tls", "tls-roots"] }
tower = "0.4"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webpki = "0.22"

[build-dependencies]
tonic-build = { version = "0.10.2", features = ["prost-build"] }

[[test]]
name = "integration"

[dev-dependencies]
names = "0.14"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
testcontainers = "0.14"
tokio = { version = "1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
toml = "0.7"
eyre = "0.6"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
